--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d"  Background="LightGray" BorderBrush="{StaticResource AccentColorBrush}" BorderThickness="0.5" Margin="0,0,0,0" >
-    <Grid Background="White" >
+    <Grid Background="White" x:Name ="ListBoxModuleControlMainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -14,7 +14,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" Foreground="{StaticResource AccentColorBrush}" FontSize="16"  TextWrapping="Wrap" />
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" FontSize="16"  TextWrapping="Wrap" />
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.RowSpan="2" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" FontSize="14" Margin="10,20,5,0"/>
