--- a/Launcher/DocumentModule/CategoryControl.xaml
+++ b/Launcher/DocumentModule/CategoryControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Height="130" Width="130">
-    <Grid Background="White" Margin="5">
+    <Grid Background="White">
         <TextBlock x:Name="TextBlockCategory" TextAlignment="Center" FontSize="16" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 
