--- a/Launcher/DocumentModule/DocumentPresenter.xaml
+++ b/Launcher/DocumentModule/DocumentPresenter.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="DocumentModule.DocumentPresenter"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mpp="clr-namespace:MoonPdfLib;assembly=MoonPdfLib"
         Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None">
     <Grid>
         
