--- a/Launcher/DocumentModule/DocumentPresenter.xaml
+++ b/Launcher/DocumentModule/DocumentPresenter.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None">
-    <Grid>
+    <Grid x:Name="GridDocument">
         
     </Grid>
 </Window>
