--- a/Launcher/Launcher/Modules/Documents/MainWindowControl.xaml
+++ b/Launcher/Launcher/Modules/Documents/MainWindowControl.xaml
@@ -16,7 +16,9 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListBox x:Name="Docum" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalContentAlignment="Stretch" VerticalAlignment="Stretch" SelectionChanged="Docum_SelectionChanged"/>
+        <Grid Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" x:Name="GridDocument" >
+            <ListBox SelectionChanged="Docum_SelectionChanged"/>
+        </Grid>
         <ListBox x:Name="ListBoxDocument" Grid.Column="0" Grid.RowSpan="3" Background="#008000" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" SelectionChanged="ListBoxDocument_OnSelectionChanged">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
