--- a/Launcher/Launcher/Modules/Documents/HistoryControl.xaml
+++ b/Launcher/Launcher/Modules/Documents/HistoryControl.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid x:Name="GridHistory" Background="White">
+             d:DesignHeight="300" d:DesignWidth="300" >
+    <Grid x:Name="GridHistory" Background="White" Loaded="GridHistory_Loaded" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
