--- a/Launcher/Launcher/Modules/Documents/CategoryControl.xaml
+++ b/Launcher/Launcher/Modules/Documents/CategoryControl.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Height="129" Width="130" BorderThickness="0,0,0,0" Margin="-6,0,-6,0">
-    <Grid Background="White"  >
+             d:DesignHeight="300" d:DesignWidth="300" Height="129" Width="130" BorderThickness="1,0,0,0" Margin="-2,0,0,0">
+    <Grid Background="Green">
+        <Grid Background="White">
         <TextBlock x:Name="TextBlockCategory" TextAlignment="Center" FontSize="16" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Grid>
     </Grid>
 
 </UserControl>
