--- a/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
+++ b/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="DocumentModule.DocumentPresenter"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None">
+        Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" Background="{x:Null}">
     <Grid x:Name="GridDocument">
-        
+    	<Grid.Background>
+    		<SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}"/>
+    	</Grid.Background>
     </Grid>
 </Window>
