--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -10,6 +10,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="Resources/Style.xaml" />
+                <ResourceDictionary Source="Simple Styles.xaml"/>
+                <ResourceDictionary Source="MetroStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
