--- a/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
+++ b/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
@@ -1,10 +1,29 @@
-﻿<Window x:Class="DocumentModule.DocumentPresenter"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing" xmlns:ee="http://schemas.microsoft.com/expression/2010/effects" xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls" x:Class="DocumentModule.DocumentPresenter"
         Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" Background="{x:Null}">
-    <Grid x:Name="GridDocument">
-    	<Grid.Background>
-    		<SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}"/>
-    	</Grid.Background>
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="15*"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="15*"/>
+		</Grid.RowDefinitions>
+
+		<Grid x:Name="GridDocument" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" >
+
+			<Grid.Background>
+				<SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}"/>
+			</Grid.Background>
+            
+			
+            
+		</Grid>
+        <Expander Header="Вернуться" Grid.Column="0" Grid.Row="0" ExpandDirection="Left" MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown" Expanded="Expander_OnExpanded">
+        </Expander>
+
     </Grid>
 </Window>
