--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d"  Background="LightGray" BorderBrush="{StaticResource AccentColorBrush}" BorderThickness="0.5" Margin="0,0,0,0" >
+             mc:Ignorable="d"  Background="LightGray" BorderBrush="#AAA" BorderThickness="0.5" Margin="-6,1,1,1">
     <Grid Background="White" x:Name ="ListBoxModuleControlMainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"></ColumnDefinition>
