--- a/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
+++ b/Launcher/Launcher/Modules/Documents/DocumentPresenter.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing" xmlns:ee="http://schemas.microsoft.com/expression/2010/effects" xmlns:Custom="http://metro.mahapps.com/winfx/xaml/controls" x:Class="DocumentModule.DocumentPresenter"
-        Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" Background="{x:Null}">
+        Title="DocumentPresenter" Height="300" Width="300" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" Background="{x:Null}" Closing="Window_Closing">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"/>
