--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -2,8 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:local="clr-namespace:Launcher" x:Class="Launcher.MainWindowLauncher"
-        Title="Помощник машиниста мобильное приложение" WindowState="Maximized" WindowStyle="None" Loaded="MetroWindow_Loaded">
+        xmlns:local="clr-namespace:Launcher" 
+        x:Class="Launcher.MainWindowLauncher"
+        Title="Помощник машиниста мобильное приложение" 
+        WindowState="Maximized" WindowStyle="None" 
+        Loaded="MetroWindow_Loaded">
     <Grid x:Name="MainGrid" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden">
         <Grid.RowDefinitions>
             <RowDefinition/>
