--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -27,7 +27,15 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid x:Name="grid" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7" Background="{StaticResource AccentColorBrush}">
+        <Grid x:Name="grid" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFFAFBFA" Offset="0.014"/>
+                    <GradientStop Color="{DynamicResource AccentColor}" Offset="0.019"/>
+                    <GradientStop Color="Green" Offset="0.956"/>
+                    <GradientStop Color="Green" Offset="0.956"/>
+                </LinearGradientBrush>
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -42,14 +50,14 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            
+
             <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="0" Grid.RowSpan="2" HorizontalContentAlignment="Right" Foreground="White" FontSize="17" VerticalAlignment="Bottom"/>
-            <Label HorizontalAlignment="Right" Content="Виктор Викторович"  Grid.Column="6" Grid.Row="0" Foreground="White" HorizontalContentAlignment="Right" FontSize="15" Background="{StaticResource AccentColorBrush}" />
+            <Label HorizontalAlignment="Right" Content="Виктор Викторович"  Grid.Column="6" Grid.Row="0" Foreground="White" HorizontalContentAlignment="Right" FontSize="15" />
             <TextBlock x:Name="TextBlockAny" Grid.Column="7" Grid.RowSpan="2"  TextWrapping="WrapWithOverflow" Foreground="White" FontSize="15" HorizontalAlignment="Right"/>
-            <TextBox Controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="2" VerticalAlignment="Center">
+            <TextBox Controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="5" FontSize="20" Grid.RowSpan="2" VerticalAlignment="Center" Height="37">
                 <TextBox.Style>
                     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}"/>
-                </TextBox.Style>    
+                </TextBox.Style>
             </TextBox>
 
         </Grid>
@@ -66,7 +74,7 @@
         </ListBox>
 
         <Grid x:Name="ContentGrid" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" Background="#F2F1EF" HorizontalAlignment="Right">
-           
+
         </Grid>
     </Grid>
 </Controls:MetroWindow>
