--- a/Launcher/Launcher/Modules/Documents/ControlTextListBoxWrap.xaml
+++ b/Launcher/Launcher/Modules/Documents/ControlTextListBoxWrap.xaml
@@ -1,17 +1,9 @@
-﻿<UserControl x:Class="Launcher.Modules.Documents.ControlTextListBoxWrap"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-        <ListBox>
-        <ListBox.ItemTemplate>
-            <DataTemplate>
-                <WrapPanel>
-                    <TextBlock TextWrapping="Wrap"></TextBlock>
-                </WrapPanel>
-            </DataTemplate>
-        </ListBox.ItemTemplate>
-        </ListBox>
-</UserControl>
+﻿<ListBox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+    <ListBox.ItemTemplate>
+        <DataTemplate>
+            <WrapPanel>
+                <TextBlock TextWrapping="Wrap"></TextBlock>
+            </WrapPanel>
+        </DataTemplate>
+    </ListBox.ItemTemplate>
+</ListBox>
