--- a/Launcher/Launcher/VIew/LoginView.xaml
+++ b/Launcher/Launcher/VIew/LoginView.xaml
@@ -1,10 +1,12 @@
-﻿<Controls:MetroWindow x:Class="Launcher.LoginWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-    Title="Окно входа в программу" Height="430.477" Width="611.206" >
+﻿<UserControl x:Class="Launcher.VIew.LoginView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TabControl HorizontalAlignment="Left" Height="399" VerticalAlignment="Top" Width="607" SelectedIndex="1">
+        <TabControl HorizontalAlignment="Left" VerticalAlignment="Top" SelectedIndex="1">
             <TabControl.Resources>
                 <Style TargetType="{x:Type TabPanel}">
                     <Setter Property="HorizontalAlignment" Value="Center" />
@@ -28,7 +30,7 @@
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping="WrapWithOverflow" Foreground="White" HorizontalAlignment="Center" FontStyle="Italic" TextAlignment="Center">
-                        Здравствуйте,для работы с программой, необходимо зарегистрироваться. ООО "ПКБ ЖТ" <Hyperlink NavigateUri="http://pkbzht.ru/" Click="Hyperlink_Click" Foreground="White"> http://pkbzht.ru/</Hyperlink>
+                        Здравствуйте,для работы с программой, необходимо зарегистрироваться. ООО "ПКБ ЖТ" <Hyperlink NavigateUri="http://pkbzht.ru/" Foreground="White"> http://pkbzht.ru/</Hyperlink>
                     </TextBlock>
                     <Label Name="Name_lbl"      Grid.Row="1" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Имя" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9" />
                     <TextBox Name="Name_tbx"    Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
@@ -42,7 +44,7 @@
                     <PasswordBox Name="Passwb2" Grid.Row="5" Grid.Column="1"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <Label Name="email_lbl"     Grid.Row="6" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Электронная почта"  HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
                     <TextBox Name="email_tbx"   Grid.Row="6" Grid.Column="1" />
-                    <Button Name="Accept_btn"   Grid.Row="7" Grid.Column="0"  Grid.ColumnSpan="2" Content="Зарегистрироваться" Click="Accept_btn_Click" />
+                    <Button Name="Accept_btn"   Grid.Row="7" Grid.Column="0"  Grid.ColumnSpan="2" Content="Зарегистрироваться" />
                     <!--<Label-->
                 </Grid>
             </TabItem>
@@ -70,10 +72,9 @@
                     <TextBox            Grid.Column="1" Grid.Row="3" Margin="2.5,2.5,5,2.5"/>
                     <Label              Grid.Column="0" Grid.Row="4" Content="Вес поезда (тонн)" Background="White" Margin="5,2.5,2.5,5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black"  BorderThickness="0.4"  HorizontalAlignment="Stretch" />
                     <TextBox            Grid.Column="1" Grid.Row="4" Margin="2.5,2.5,5,5"/>
-                    <Button             Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Вход в программу" Click="Button_Click" FontSize="19" Foreground="{StaticResource AccentColorBrush}"/>
+                    <Button             Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Вход в программу" FontSize="19" Foreground="{StaticResource AccentColorBrush}"/>
                 </Grid>
             </TabItem>
         </TabControl>
-
     </Grid>
-</Controls:MetroWindow>
+</UserControl>
