--- a/Launcher/Launcher/VIew/ShellView.xaml
+++ b/Launcher/Launcher/VIew/ShellView.xaml
@@ -3,10 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid Background="White">
-        <TextBlock Text="Hello Caliburn Micro!"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
+        <ContentControl x:Name="ActiveItem"/>
     </Grid>
 
 </Window>
