--- a/Launcher/Launcher/VIew/UpdaterView.xaml
+++ b/Launcher/Launcher/VIew/UpdaterView.xaml
@@ -1,23 +1,27 @@
-﻿<Controls:MetroWindow x:Class="Launcher.ApplicationUpdater"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="ApplicationUpdater" Height="216.495" Width="529.897">
+﻿<UserControl x:Class="Launcher.VIew.UpdaterView_2_"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Button Content="Поехали" Grid.Row="3" Grid.Column="3"/>
-        <ProgressBar Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Height="Auto"/>
-        <WebBrowser  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="3"></WebBrowser>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Content="Поехали" Grid.Row="3" Grid.Column="3"/>
+            <ProgressBar Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Height="Auto"/>
+            <WebBrowser  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="3"></WebBrowser>
+        </Grid>
     </Grid>
-</Controls:MetroWindow>
+</UserControl>
